--- a/Programme/Makefile
+++ b/Programme/Makefile
@@ -4,14 +4,14 @@ EXEC=grille
 
 all: $(EXEC)
 
-grille: grille.o menu.o
-		$(CC) -o grille grille.o menu.o $(ARGS)
+grille: grille.o main.o
+		$(CC) -o grille grille.o main.o $(ARGS)
 
 grille.o: grille.c
 		$(CC) -o grille.o -c grille.c $(ARGS)
 
-menu.o: menu.c grille.h 
-		$(CC) -o menu.o -c menu.c $(ARGS)
+main.o: main.c grille.h 
+		$(CC) -o main.o -c main.c $(ARGS)
 
 clean:
 		rm -rf *.o
